# stock_market_app

./: .env.example  .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  README.md  SplashScreen.qml  loader.cpp  loader.h  main.cpp  main.qml  my-release-key.keystore  test.cpp
api/: alphavantage.cpp  alphavantage.h  api.cpp  api.h  eod.cpp  eod.h  figi.cpp  figi.h  filefetch.cpp  filefetch.h  finnhub.cpp  finnhub.h  marketstack.cpp  openai.cpp  openai.h  reply.cpp  reply.h  tradernet.cpp  tradernet.h  twelvedata.cpp  twelvedata.h
client/: CMakeLists.txt  client.cpp  client.h  loader.h  main.cpp
client/android/: AndroidManifest.xml
client/model/: asset_list.cpp  asset_list.h  search_tag.cpp  search_tag.h  ticker_list.cpp  ticker_list.h
client/ui/: Account.qml  Charts.qml  Favorite.qml  Main.qml  Planned.qml  Settings.qml  StockFull.qml
data/: currency.h  instrument.cpp  instrument.h  market.cpp  market.h  market_meta.cpp  meta.cpp  meta.h  (+11 more)
sdk/: CMakeLists.txt  loader.cpp  loader.h  sdk_preinclude.cmake
sdk/api/: eod.cpp  eod.h  marketstack.h  openai.cpp  reply.cpp  twelvedata.h
sdk/data/: instrument.cpp  instrument.h  user.cpp
sdk/data/geo/: continent.cpp  currency.cpp  instype.cpp  region.cpp
sdk/data/instrument/: dividend.cpp  identity.cpp  identity.h  meta.cpp  quotes.cpp  stability.cpp  symbol.cpp  symbol.h  ticker.cpp  ticker.h
sdk/data/user/: info.cpp
sdk/include/: loader.h  sdk.h  sdk_def.h
sdk/include/account/: account.h  info.h  profile.h
sdk/include/api/: alphavantage.h  api.h  eod.h  figi.h  filefetch.h  finnhub.h  marketstack.h  openai.h  reply.h  syncer.h  twelvedata.h
sdk/include/api/ai/: openai.h
sdk/include/api/connectors/: endpoints.h
sdk/include/api/eod/: alphavantage.h  eod.h  figi.h  finnhub.h  marketstack.h  twelvedata.h  yahoo.h
sdk/include/api/transport/: call.h  filefetch.h  provider.h  syncer.h
sdk/include/common/: dtime.h  features.h  json.h  res_dir.h  trackable.h
sdk/include/core/: enum.h  isin.h  symbol.h
sdk/include/core/security/: data.h  instrument.h  legal.h  meta.h
sdk/include/core/security/finance/: capital.h  estimate.h  finance.h  fundamental.h
sdk/include/core/security/listing/: corporate_action.h  dividend.h  quotes.h  short_interest.h  ticker.h  valuation.h
sdk/include/core/security/quarter/: balance.h  cash_flow.h  earnings.h  incomes.h  quarter_data.h  trend.h
sdk/include/data/: instrument_test.h  user.h
sdk/include/data/instrument/: dividend.h  identity.h  meta.h  quotes.h  symbol.h  ticker.h  valuation.h
sdk/include/enum/: enum.h
sdk/include/geo/: geo.h
sdk/include/instrument/: balance.h  capital.h  cash_flow.h  corporate_action.h  data.h  dividend.h  earnings.h  estimate.h  finance.h  fundamental.h  incomes.h  instrument.h  isin.h  legal.h  meta.h  quartel_data.h  quotes.h  short_interest.h  symbol.h  ticker.h  trend.h  valuation.h
sdk/include/ledger/: ledger.h  portfolio.h  screener.h  targets.h
sdk/include/service/: finder.h  market.h  roster.h
sdk/include/services/: finder.h  market.h
sdk/include/stock/: stock.h  transaction.h
sdk/include/user/account/: account.h  identity.h  profile.h  session.h
sdk/include/user/ledger/: ledger.h  pending.h  portfolio.h  screener.h  targets.h  watchlist.h
sdk/include/user/stock/: stock.h  transaction.h
sdk/include/utilities/: features.h  trackable.h
sdk/settings/: network.cpp
sdk/source/: loader.cpp
sdk/source/account/: info.cpp
sdk/source/api/: alphavantage.cpp  api.cpp  eod.cpp  figi.cpp  filefetch.cpp  finnhub.cpp  marketstack.cpp  openai.cpp  reply.cpp  twelvedata.cpp
sdk/source/api/ai/: openai.cpp
sdk/source/api/broker/: tradernet.cpp
sdk/source/api/connectors/: endpoints.cpp
sdk/source/api/eod/: alphavantage.cpp  eod.cpp  figi.cpp  finnhub.cpp  marketstack.cpp  twelvedata.cpp  yahoo.cpp
sdk/source/api/transport/: call.cpp  filefetch.cpp  provider.cpp  syncer.cpp
sdk/source/common/: dtime.cpp  features.cpp  json.cpp  res_dir.cpp  trackable.cpp
sdk/source/core/: isin.cpp  symbol.cpp
sdk/source/core/enum/: continent.cpp  country.cpp  currency.cpp  exchange.cpp  home_category.cpp  instype.cpp  month.cpp  quarter.cpp  region.cpp
sdk/source/core/security/: data.cpp  instrument.cpp  legal.cpp  meta.cpp
sdk/source/core/security/finance/: capital.cpp  estimate.cpp  finance.cpp  fundamental.cpp
sdk/source/core/security/listing/: corporate_action.cpp  dividend.cpp  quotes.cpp  short_interest.cpp  ticker.cpp  valuation.cpp
sdk/source/core/security/quarter/: balance.cpp  cash_flow.cpp  earnings.cpp  incomes.cpp  quarter_data.cpp  trend.cpp
sdk/source/data/: instrument.cpp  market.cpp  market_meta.cpp  user.cpp
sdk/source/data/instrument/: balance.cpp  dividend.cpp  earnings.cpp  identity.cpp  meta.cpp  profitability.cpp  shares.cpp  stability.cpp  symbol.cpp  ticker.cpp  valuation.cpp
sdk/source/data/user/: info.cpp  stock.cpp
sdk/source/enum/: continent.cpp  country.cpp  currency.cpp  exchange.cpp  home_category.cpp  instype.cpp  month.cpp  quartel.cpp  region.cpp
sdk/source/geo/: continent.cpp  country.cpp  currency.cpp  exchange.cpp  home_category.cpp  instype.cpp  month.cpp  quartel.cpp  region.cpp
sdk/source/instrument/: balance.cpp  capital.cpp  cash_flow.cpp  corporate_action.cpp  data.cpp  dividend.cpp  earnings.cpp  estimate.cpp  finance.cpp  fundamental.cpp  incomes.cpp  instrument.cpp  isin.cpp  legal.cpp  meta.cpp  quartel_data.cpp  quotes.cpp  short_interest.cpp  symbol.cpp  ticker.cpp  trend.cpp  valuation.cpp
sdk/source/service/: finder.cpp  market.cpp  roster.cpp
sdk/source/services/: finder.cpp  market.cpp
sdk/source/settings/: network.cpp
sdk/source/stock/: stock.cpp  transaction.cpp
sdk/source/user/account/: account.cpp  identity.cpp  profile.cpp  session.cpp
sdk/source/user/ledger/: ledger.cpp  pending.cpp  watchlist.cpp
sdk/source/user/stock/: stock.cpp  transaction.cpp
sdk/source/utilities/: features.cpp  res_dir.cpp  trackable.cpp
server/: CMakeLists.txt  main.cpp  market.cpp  market.h  nexus.cpp  nexus.h  roster.cpp  roster.h  session.cpp  session.h
(+267 files in other folders)
